tests/e2e/regex_after_name3.error
Error: syntax error in story at line 1, column 12

1|    my_service /regexp/
                 ^

E0056: Expected end of line instead of `/regexp/`.
